part_02/Module02/AWS/example02/network.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.10.10.0/24"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
        Name = "MyVPC"
        env = "dev"
  }
}

resource "aws_subnet" "subnet" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "10.10.10.0/24"
  availability_zone = "eu-central-1a"

    tags = {
            Name = "MySubnet"
            env = "dev"
    }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
}

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta" {
  subnet_id = aws_subnet.subnet.id
  route_table_id = aws_route_table.rt.id
}
